# MiLES

./: .gitignore  LICENSE  Pipfile  environment.yaml  pyproject.toml  requirements.txt  setup.py
notebooks/: ablation.ipynb  ablation_all.ipynb  ablation_levels.ipynb  concept_drift.ipynb  data_exploration.ipynb  dev.ipynb  discretization.ipynb  discretization_tune.ipynb  emb_prio.ipynb  emb_sharing_motivation.ipynb  embedding_weights.ipynb  make_foursquare.ipynb  model_hparams.ipynb  sparsity_v_info.ipynb  table.ipynb  time_embed.ipynb
pub/: collas2024_conference.bib  collas2024_conference.tex  collas2025_conference.bib  collas2025_conference.tex
pub/figs/: approach.tex
reports/: maintul_grid.jsonl  maintul_grid_.jsonl
src/: buffers.py  embedding.py  loss.py
src/data/: buffer.py  discretization.py  hex_utils.py  loader.py  make_dataset.py  make_datasets.py  make_foursquare.py  metrics.py  prep_datasets.py  test_.py  tracker.py  utils.py
src/models/: __init__.py  autoencoder.py  deep_tul.py  deeptul.py  embedding.py  gru.py  maintul copy.py  maintul.py  rvae.py  t3s.py  test.py  test_deep_tul.py  test_models.py  tul_vae.py  (+5 more)
tools/: ablate_all.py  ablate_isolate.py  ablate_levels.py  ablate_loc_levels.py  ablate_remove.py  all_models.py  debug.py  maintul.py  mptest.py  run.py  search.py  search_discretization.py  search_models.py  search_time.py  sweep_gru.py  test_discretization.py  test_embedding_prio.py  test_level_weight.py  test_time.py  train.py  train_gru.py  train_move_ae.py  train_rvae.py  tuler.py  tune_discretization.py  tune_models.py  utils.py
(+4 files in other folders)
