[project]
name = "lbn-trajectory-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pytest>=8.3.3",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]
